--- a/Laneta.UI.Web/Views/Shared/_Layout.cshtml
+++ b/Laneta.UI.Web/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
 <body>
     <header>
         <hgroup>
-            <h1><img src="@Url.Content("~/Content/images/logo_text.png")" alt="Call Center" /></h1>
-            <h2>Support</h2>
+            @*<h1><img src="@Url.Content("~/Content/images/logo_text.png")" alt="Call Center" /></h1>
+            <h2>Support</h2>*@
         </hgroup>
 
         <nav>
@@ -56,8 +56,6 @@
         </section>
     </div>
 
-    <p id="copyright">
-        &copy; 2019 Laneta
-    </p>
+    <center id="copyright">  2019 Laneta </center>
 </body>
 </html>
